--- a/101-index.html
+++ b/101-index.html
@@ -4,11 +4,11 @@
     <title>HBnB</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="4-common.css">
-    <link rel="stylesheet" href="3-header.css">
-    <link rel="stylesheet" href="3-footer.css">
-    <link rel="stylesheet" href="6-filters.css">
-    <link rel="stylesheet" href="101-places.css">
+    <link rel="stylesheet" href="/4-common.css">
+    <link rel="stylesheet" href="/3-header.css">
+    <link rel="stylesheet" href="/3-footer.css">
+    <link rel="stylesheet" href="/6-filters.css">
+    <link rel="stylesheet" href="/101-places.css">
     <link rel="icon" href="images/icon.png">
   </head>
   <body>
